set(SOURCES
  client.cc
  utility.cc
)

add_library(${TWITTER_CPP_LIBRARY} ${SOURCES})

target_link_libraries(${TWITTER_CPP_LIBRARY}
  ${OPENSSL_LIBRARIES}
  ${CASABLANCA_LIBRARIES}
  ${Boost_SYSTEM_LIBRARY}
  ${Boost_THREAD_LIBRARY}
  ${Boost_ATOMIC_LIBRARY}
  ${Boost_CHRONO_LIBRARY}
  ${Boost_RANDOM_LIBRARY}
  ${CMAKE_THREAD_LIBS_INIT}
  )

set (TWITTER_CPP_VERSION_MAJOR 0)
set (TWITTER_CPP_VERSION_MINOR 1)
set (TWITTER_CPP_VERSION_REVISION 0)

if(WIN32)
  set_target_properties(${TWITTER_CPP_LIBRARY} PROPERTIES
    OUTPUT_NAME "${TWITTER_CPP_LIBRARY}_${TWITTER_CPP_VERSION_MAJOR}_${TWITTER_CPP_VERSION_MINOR}")
else()
  set_target_properties(${TWITTER_CPP_LIBRARY} PROPERTIES
    SOVERSION ${TWITTER_CPP_VERSION_MAJOR}.${TWITTER_CPP_VERSION_MINOR})

  install(
    TARGETS ${TWITTER_CPP_LIBRARY}
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    )
endif()
